SERVER-18962 ignore IllegalOperation when replicating a dropCollection